Fix for Issues : FLY-2279, FLY-2280, FLY-2035

--- a/findly-builder/src/app/components/search-interface/search-interface.component.html
+++ b/findly-builder/src/app/components/search-interface/search-interface.component.html
@@ -20,7 +20,7 @@
       <div class="search-interface-right-sec">  
         <div class="radio-section">
           <div class="main-title">Copy Configuration</div>
-          <div class="label-desc p-0">Choose whether to apply the same Configurations as per Previous settings</div>
+          <div class="label-desc p-0 mb-2">Choose whether to apply the same Configurations as per Previous settings</div>
          
           <div class="kr-sg-dropdowns">        
             <div class="dropdown dropdown-open">
