--- a/findly-builder/src/app/components/search-interface/search-interface.component.scss
+++ b/findly-builder/src/app/components/search-interface/search-interface.component.scss
@@ -122,6 +122,7 @@
                         .drop-enable{
                             border: solid 1px;
                             background: #ffffff;
+                            color: #202124;
                         }
                     }
                 }
