--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -2222,3 +2222,30 @@ display: none !important;
 .show_insights_top_down .query_analytics_top_down img{
   margin-right: 7px;
 }
+
+.main-content-title-grid-data{
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 0px;
+  width: 100%;
+  }
+  .main-content-title-grid-data .title-box-data{
+  padding: 5px;
+  width: 25%;
+  }
+  .main-content-title-grid-data .title-box-data .title-name{
+  border-radius: 4px;
+  color: #202124;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  padding: 11px 12px;
+  height: 100%;
+  background: #FFFFFF;
+  border: 1px solid #E7F1FF;
+  box-sizing: border-box;
+  box-shadow: 0px 0px 11px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  }
