--- a/findly-builder/src/app/components/app-menu/app-menu.component.scss
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.scss
@@ -479,6 +479,7 @@ app-mainmenu{
 		font-size: 14px;
 		line-height: 20px;
 		margin-bottom: 5px;
+		cursor: pointer;
 		img{
 			margin-left: 5px;
 		}
