--- a/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.html
+++ b/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.html
@@ -25,62 +25,22 @@
                     <div class="current-plan-title" *ngIf="selectedPlan.planName===plan.name"><img src="assets/icons/pricing/check-round.svg">Current Plan</div>
                   </div>
                   <div class="card-desc" *ngFor="let info of plan.featureData" [hidden]="!(info.displayOnBanner)">{{info.displayText}}</div>
-                  <!-- <div class="card-desc">50k Queries per month</div>
-                  <div class="card-desc">Scheduled Crawling</div>
-                  <div class="card-desc">Experiments</div>
-                  <div class="card-desc">Community Support</div> -->
                   <button class="kr-sg-button-secondary btn_lg" (click)="plan.name==='Enterprise'?'':openOrderConfPopup(plan)">{{plan.name==='Enterprise'?'Contact Us':'Choose Plan'}}</button>
               </div>
               <div class="goto_details" (click)="showPlanDetails = plan.name">Go to Details</div>
             </div>
           </div>
-
-          <!-- <div class="col-4 upgrade-price-card">
-            <div class="main-content">
-              <div class="inner-content">
-                <img src="assets/icons/pricing/pro.svg" class="pro-img">
-                  <div class="title-sec">
-                    <div class="title">Pro</div>
-                    <div class="price">$399 <span>/ month</span></div>
-                  </div>
-                  <div class="card-desc">50k Documents  </div>
-                  <div class="card-desc">100k Queries per month</div>
-                  <div class="card-desc">Connectors & Unstructured content</div>
-                  <div class="card-desc">Multiple indices</div>
-                  <div class="card-desc">E-mail Support</div>
-                  <button class="kr-sg-button-secondary btn_lg">Choose Plan</button>
-              </div>
-              <div class="goto_details">Go to Details</div>
-            </div>            
-          </div>
-
-          <div class="col-4 upgrade-price-card custom_">
-            <div class="main-content">
-              <div class="inner-content">
-                <img src="assets/icons/pricing/enterprise.svg" class="enterprise-img">
-                <div class="title-sec">
-                  <div class="title">Enterprise</div>
-                  <div class="custom-title">Custom</div>
-                </div>
-                <div class="card-desc">Any no. of documents </div>
-                <div class="card-desc">Any no. of documents</div>
-                <div class="card-desc">Custom SLAs</div>
-                <div class="custom-desc-text">Fully Customizable & Tailored Solution for your business needs</div>
-                <button class="kr-sg-button-secondary btn_lg">Contact US</button>
-              </div>
-              <div class="goto_details">Go to Details</div>
-            </div>            
-          </div> -->
         </div>
 
-        <div class="choose-plan-data-table if-standard">
+        <div class="choose-plan-data-table" *ngIf="showPlanDetails!=''" [ngClass]='{"if-standard":showPlanDetails}'>
          <!-- if-free, if-standard, if-pro, if-enterprise   add this classes based on type selected--> 
          <div class="header-table-plan row m-0">
             <div class="type-title width-24">              
             </div>
             <div class="type-title width-19"  *ngFor="let plan of filterPlansData">
               <div class="title">{{plan.name}}</div>  
-              <div class="plan-duration">${{plan.planAmount}} / month </div>
+              <div class="plan-duration" *ngIf="plan.type!='enterprise'">${{plan.planAmount}} / month</div>
+              <div class="plan-duration" *ngIf="plan.type=='enterprise'">Custom Pricing</div>
               <button class="kr-sg-button-secondary btn_lg">Choose Plan</button>
             </div>
             <!-- <div class="type-title width-19">
@@ -100,12 +60,15 @@
             </div> -->
           </div>
 
-          <div class="body-content-plan" *ngFor="let plan of filterPlansData;">
-            <div class="body-table-plan row" *ngFor="let feature of plan.featureData;">
-              <div class="title width-24 pl-4">{{feature.name}} <img src="assets/icons/pricing/info.svg"></div>
-              <div class="title width-19">{{feature.limit}}</div>
-              <div class="title width-19">{{feature.limit}}</div>
-              <div class="title width-19">{{feature.limit}}</div>
+          <div class="body-content-plan" *ngIf="listPlanFeaturesData">
+            <div class="body-table-plan row" *ngFor="let feature of listPlanFeaturesData[0]">
+              <div class="title width-24 pl-4">{{feature[1].name}} <img src="assets/icons/pricing/info.svg"></div>
+              <div class="title width-19" *ngIf="feature[2].fullDisplayText!=undefined">{{feature[2].fullDisplayText}}</div>
+              <div class="title width-19" *ngIf="feature[3].fullDisplayText!=undefined">{{feature[3].fullDisplayText}}</div>
+              <div class="title width-19" *ngIf="feature[4].fullDisplayText!=undefined">{{feature[4].fullDisplayText}}</div>
+              <div class="title width-19" *ngIf="feature[2].fullDisplayText==undefined&&feature[2].featureActive==true"><img src="assets/icons/pricing/check.svg"></div>
+              <div class="title width-19" *ngIf="feature[3].fullDisplayText==undefined&&feature[3].featureActive==true"><img src="assets/icons/pricing/check.svg"></div>
+              <div class="title width-19" *ngIf="feature[4].fullDisplayText==undefined&&feature[4].featureActive==true"><img src="assets/icons/pricing/check.svg"></div>
             </div>
             <!-- <div class="body-table-plan row">
               <div class="title width-24 pl-4">Number of Queries <img src="assets/icons/pricing/info.svg"></div>
@@ -216,7 +179,7 @@
     </div>
   </perfect-scrollbar>
   <div class="modal-footer text-right">
-    <button class="kr-sg-button-primary btn_lg" (click)="overageData.overageShow?buyOveragePayment():openPaymentGatewayPopup()">Pay</button>
+    <button class="kr-sg-button-primary btn_lg" (click)="paymentPlan(overageData.overageShow)">Pay</button>
     <button class="kr-sg-button-secondary backbtn btn_md" (click)="closeOrderConfPopup()">Cancel</button>
   </div>
 </kr-modal>
