--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -68,11 +68,11 @@
                <img id="infoWarning1" src="assets/icons/warning_escalation.svg" style="display: none;" height="12" width="12" />
 
             </div>
-            <div class="kr-sg-checkbox d-block p-0">
+            <div class="kr-sg-checkbox d-none">
                 <input id="checkbox_1" class="checkbox-custom" type="checkbox" [(ngModel)]="credntial.anonymus">
                 <label for="checkbox_1" class="checkbox-custom-label">Allow anonymous users to chat with bot</label>
             </div>
-            <div class="kr-sg-checkbox d-block p-0">
+            <div class="kr-sg-checkbox  d-none">
                 <input id="checkbox_2" class="checkbox-custom" type="checkbox" [(ngModel)]="credntial.register">
                 <label for="checkbox_2" class="checkbox-custom-label">Auto register new user Kore.ai Bots Platform</label>
             </div>
@@ -89,7 +89,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="switch-toggle mt-4">                
+            <div class="switch-toggle mt-4 d-none">                
                 <label class="kr-sg-toggle">
                     <input type="checkbox" [(ngModel)]="credntial.enabled">
                     <div class="slider"><span class="enabled">Push Notifications Enabled</span><span class="disabled">Push Notifications Enabled</span></div>
@@ -116,11 +116,11 @@
                 <input type="text" autocomplete="off" name="credname" placeholder="Enter Name" [(ngModel)]="editCreden.name"
                     class="input-text">
             </div>
-            <div class="kr-sg-checkbox d-block p-0">
+            <div class="kr-sg-checkbox d-block p-0 ">
                 <input id="checkbox_1" class="checkbox-custom" type="checkbox" [(ngModel)]="editCreden.anonymus">
                 <label for="checkbox_1" class="checkbox-custom-label">Allow anonymous users to chat with bot</label>
             </div>
-            <div class="kr-sg-checkbox d-block p-0">
+            <div class="kr-sg-checkbox d-block p-0 ">
                 <input id="checkbox_2" class="checkbox-custom" type="checkbox" [(ngModel)]="editCreden.register">
                 <label for="checkbox_2" class="checkbox-custom-label">Auto register new user Kore.ai Bots Platform</label>
             </div>
