--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -55,7 +55,7 @@
                     </div>
                     <!-- <div class="headerMenuTab" [routerLink]="['/dashboard']" skipLocationChange routerLinkActive="active" (click)="analyticsClick('metrics')">Analytics</div> -->
                     <!-- <div class="headerMenuTab" id='experimentsTab' [ngClass]="{'active' : mainMenu == '/experiments'}" (click)="analyticsClick('/experiments')">Experiments</div> -->
-                    <div class="headerMenuTab" id='channelsTab' [ngClass]="{'active' : mainMenu == '/actions'}" skipLocationChange routerLinkActive="active" (click)="analyticsClick('/actions')">
+                    <div class="headerMenuTab" id='channelsTab' [ngClass]="{'active' : mainMenu == '/generalSettings'}" skipLocationChange routerLinkActive="active" (click)="analyticsClick('/generalSettings')">
                         <span>MANAGE</span>
                         <span routerLink="/actions" class="d-none"></span>
                         <span routerLink="/smallTalk" class="d-none"></span>
@@ -65,6 +65,7 @@
                         <span routerLink="/pricing" class="d-none"></span>
                         <span routerLink="/usageLog" class="d-none"></span>
                         <span routerLink="/invoices" class="d-none"></span>
+                        <span routerLink="/generalSettings" class="d-none"></span>
                     </div>
                 </div>
             </div>
@@ -95,7 +96,7 @@
                                         <div class="title-secondary">Recent Apps</div>
                                         <div class="app-name-block" *ngFor='let app of recentApps' (click)="openApp(app);myDrop.close()">
                                             <div class="app-name">{{app.name|titlecase}}</div>
-                                            <div class="shared-name">{{app.createdBy===userId?'My App':'Shared by '+app.userDetails.fullName}}</div>
+                                            <div class="shared-name d-none">{{app.createdBy===userId?'My App':'Shared by '+app.userDetails.fullName}}</div>
                                         </div>                                                       
                                     </div>
                                     <div class="view-app-apps"  [routerLink]="['/apps']" routerLinkActive="active" skipLocationChange (click)="analyticsClick('apps',true)">View all Apps</div>
@@ -233,7 +234,8 @@
         <div class="modal-body textAlignLeft">
           <div class="kr-sg-input-text mb-3">
             <div class="label-text">App Name</div>
-            <input maxlength="128" type="text" autocomplete="off" placeholder="Enter App Name" class="input-text" [(ngModel)]="newApp.name" name="appName">
+            <input maxlength="128" type="text" autocomplete="off" placeholder="Enter App Name" class="input-text" [(ngModel)]="newApp.name" name="appName"  id="enterAppName" (blur)="inputChanged('enterName')" (change)="inputChanged('enterName')">
+            <img id="infoWarning" src="assets/icons/warning_escalation.svg" style="display: none;" height="12" width="12" />
           </div>
           <div class="kr-sg-input-text-area mb-2">
             <div class="label-text">Description</div>
@@ -256,7 +258,7 @@
         </div>
         <div class="modal-footer" [ngClass]="{'disabled': creatingInProgress}">
            <button type="button" class="btn kr-btn-cancel" data-dismiss="modal" (click)="closeCreateApp()">Close</button>
-           <button [disabled]="!newApp.name"  type="button" class="kr-sg-button-primary btn_lg"  data-dismiss="modal" (click)='createFindlyApp()'>{{creatingInProgress?'Creating...':'Create'}}</button>
+           <button type="button" class="kr-sg-button-primary btn_lg"  data-dismiss="modal" (click)='validateSource()'>{{creatingInProgress?'Creating...':'Create'}}</button>
        
           </div>
   
