--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -88,7 +88,7 @@
               <button class="dropdown-toggle dropdown-input" data-toggle="dropdown"><img
                   src="assets/icons/sidemenu/plus-table.svg">Add Content</button>
               <ul class="dropdown-menu content-menu">
-                <li (click)="addNewContentSource('contentWeb')">Web Crawling</li>
+                <li (click)="addNewContentSource('contentWeb')">Crawl Web Domain</li>
                 <li (click)="addNewContentSource('contentDoc')">Upload File</li>
               </ul>
             </div>
@@ -470,9 +470,9 @@
                               (click)="swapSlider()">{{selectedSource.numPages}}</a>
                           </div> -->
                           <div class="col_ col-2 p-0 text-right actions-images">
-                            <img src="assets/icons/return.svg" *ngIf="selectedSource.extractionType == 'webdomain'" (click)="recrwal('config',selectedSource,$event)" title="Recrawl">
-                            <img src="assets/icons/content/edit_black.svg" (click)="editTitle($event)" title="Edit">
-                            <img src="assets/icons/content/delete.svg" (click)="deletePages('source',page ,$event)" title="Delete">
+                            <img src="assets/icons/return.svg" *ngIf="selectedSource.extractionType == 'webdomain'" (click)="recrwal('config',selectedSource,$event)" title="Recrawl" ngbTooltip='Recrawl'  container="body">
+                            <img src="assets/icons/content/edit_black.svg" (click)="editTitle($event)" title="Edit" ngbTooltip='Edit'  container="body">
+                            <img src="assets/icons/content/delete.svg" (click)="deletePages('source',page ,$event)" title="Delete" ngbTooltip='Delete'  container="body">
                           </div>
                         </div>
                       </ng-container>
@@ -558,7 +558,7 @@
                
                 <div class="allow-urls-sec row allow-urlBox pl-0 pr-0"
                   *ngIf="selectedSource.advanceSettings && selectedSource.advanceSettings.allowedOpt">
-                  <div class="col-2 p-0 title">Allow URLS</div>
+                  <div class="col-2 p-0 title">Allow URLs</div>
                   <div class="col-10 p-0 d-flex align-items-center">
                     <div class="kr-sg-dropdowns">
                       <div class="dropdown dropdown-open">
@@ -611,7 +611,7 @@
                 
                 <div class="allow-urls-sec row allow-urlBox pl-0 pr-0"
                   *ngIf="selectedSource.advanceSettings && selectedSource.advanceSettings.blockedOpt">
-                  <div class="col-2 p-0 title">Block URLS</div>
+                  <div class="col-2 p-0 title">Block URLs</div>
                   <div class="col-10 p-0 d-flex align-items-center">
                     <div class="kr-sg-dropdowns">
                       <div class="dropdown dropdown-open">
