--- a/findly-builder/src/app/components/stop-words/stop-words.component.html
+++ b/findly-builder/src/app/components/stop-words/stop-words.component.html
@@ -93,7 +93,7 @@
                 <button class="dropdown-toggle dropdown-input p-0 border-0" ngbDropdownToggle><img src="assets/icons/elipse.svg"></button>                                            
                 <ul class="dropdown-menu content-menu faq-filter-add" ngbDropdownMenu>
                   <li class="restoreDefaults" (click)="restoreStopWords($event)">
-                    <img class="label-icon" src="assets/icons/return_black.svg"><span class="label_txt">{{'stopWords.restore_to_default' | translate}}</span>              
+                    <img class="label-icon" src="assets/icons/return_black.svg"><span class="label_txt">{{'stopWords.reset_to_default' | translate}}</span>              
                   </li> 
                   <li (click)='deleteAllStopWords(event)' >Delete All</li>                         
                 </ul>
