indexpipeline, dashboard, user engagement, search insights, result insights and faq bug fixes

--- a/findly-builder/src/app/components/dashboard/dashboard.component.html
+++ b/findly-builder/src/app/components/dashboard/dashboard.component.html
@@ -138,7 +138,7 @@
                                 </div> -->
                             </div>
                         </div>
-                        <div class="kr-sg-dropdowns filter-dropdown" ngbDropdown [placement]="'bottom-right'">
+                        <!-- <div class="kr-sg-dropdowns filter-dropdown" ngbDropdown [placement]="'bottom-right'">
                             <div class="dropdown dropdown-open">
                                 <button class="dropdown-toggle dropdown-input" ngbDropdownToggle><img
                                         src="assets/icons/filter.svg"></button>
@@ -153,7 +153,7 @@
                                     </div>
                                 </ul>
                             </div>
-                        </div>
+                        </div> -->
                         <div echarts [options]="chartOption" class="demo-chart-graphMode"></div>
                         <div class="legends-info mt-2 mb-2">
                             <div class="content">
@@ -228,7 +228,7 @@
                 <div class="col-12 box-content">
                     <div class="full-card">
                         <div class="kr-sg-dropdowns filter-dropdown" ngbDropdown [placement]="'bottom-right'">
-                            <div class="dropdown dropdown-open">
+                            <!-- <div class="dropdown dropdown-open">
                                 <button class="dropdown-toggle dropdown-input" ngbDropdownToggle><img
                                         src="assets/icons/filter.svg"></button>
                                 <ul class="dropdown-menu content-menu m-0" ngbDropdownMenu>
@@ -245,7 +245,7 @@
                                         <label for="checkbox_12" class="checkbox-custom-label">Content</label>
                                     </div>
                                 </ul>
-                            </div>
+                            </div> -->
                         </div>
                         <!-- <div class="info-icon" placement="top-right" ngbTooltip="Use key board shortcuts"
                             [container]='"body"' tooltipClass="metrics_tooltips"><img src="assets/icons/info.svg"></div> -->
