--- a/findly-builder/src/app/components/result-insights/result-insights.component.html
+++ b/findly-builder/src/app/components/result-insights/result-insights.component.html
@@ -30,7 +30,7 @@
                             <input type="text" placeholder="Search" class="input-search"  name="searchSources" [(ngModel)]="searchSources">
                             <img src="assets/icons/search_gray.svg" class="search-icon">
                         </div>
-                        <div class="kr-sg-dropdowns filter-dropdown" ngbDropdown [placement]="'bottom-right'">
+                        <!-- <div class="kr-sg-dropdowns filter-dropdown" ngbDropdown [placement]="'bottom-right'">
                             <div class="dropdown dropdown-open">
                                 <button class="dropdown-toggle dropdown-input" ngbDropdownToggle><img src="assets/icons/filter.svg"></button>
                                 <ul class="dropdown-menu content-menu m-0" ngbDropdownMenu>
@@ -44,7 +44,7 @@
                                     </div>
                                 </ul>
                             </div>
-                        </div>
+                        </div> -->
                     </div>                    
                 </div>
                 <!-- <div class="searched-details d-flex">
