--- a/findly-builder/src/app/components/user-engagement/user-engagement.component.html
+++ b/findly-builder/src/app/components/user-engagement/user-engagement.component.html
@@ -79,7 +79,7 @@
                             </div>
                         </div>
                         <div class="kr-sg-dropdowns filter-dropdown" ngbDropdown [placement]="'bottom-right'">
-                            <div class="dropdown dropdown-open">
+                            <!-- <div class="dropdown dropdown-open">
                                 <button class="dropdown-toggle dropdown-input" ngbDropdownToggle><img
                                         src="assets/icons/filter.svg"></button>
                                 <ul class="dropdown-menu content-menu m-0" ngbDropdownMenu>
@@ -92,7 +92,7 @@
                                         <label for="checkbox_12" class="checkbox-custom-label">Full Search</label>
                                     </div>
                                 </ul>
-                            </div>
+                            </div> -->
                         </div>
                         <div echarts [options]="userEngagementChartData" class="demo-chart-graphMode"></div>
                     </div>
