--- a/findly-builder/src/app/components/dashboard/dashboard.component.scss
+++ b/findly-builder/src/app/components/dashboard/dashboard.component.scss
@@ -331,7 +331,7 @@
                         border-top: 4px solid #28A745;
                     }
                     &.clicks{
-                        border-top: 4px solid #FF784B;
+                        border-top: 4px solid #7027E5;
                     }
                 }               
             }
