updated UI for bot actions improvments

--- a/findly-builder/src/app/scss/bt-styleguide.scss
+++ b/findly-builder/src/app/scss/bt-styleguide.scss
@@ -784,6 +784,7 @@ and open the template in the editor.
         position: absolute;          
         cursor: pointer;
         margin: 0;
+        height: auto;
         + .checkbox-custom-label{
             display: inline-block;
             vertical-align: middle;
