FLY-2160, FLY-982 Pagination restriction in "All" tab, Managed UI if AddNewResult is hidden.

--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -10324,7 +10324,7 @@ input:checked + .custom-slider:before {
     margin: 0;
     height: auto;
     padding-left: 35px;
-    cursor: pointer;
+    /* cursor: pointer; */
 }
 .custom-add-new-result-content .bold-text{
     color: #161928;
@@ -10340,6 +10340,7 @@ input:checked + .custom-slider:before {
     font-size: 14px;
     line-height: 20px;
     color: #0D6EFD;
+    cursor: pointer;
 }
 .custom-add-new-result-content .link-text img{    
     margin-right: 13px;
