--- a/findly-builder/src/app/components/actions/actions.component.scss
+++ b/findly-builder/src/app/components/actions/actions.component.scss
@@ -1,17 +1,15 @@
 .actions-container-comp{
+    padding-bottom: 20px;
+    border-bottom: 1px solid #EFF0F1;
     .header-title{
         color: #000000;
         font-weight: 500;
-        font-size: 18px;
-        line-height: 22px;
-        padding: 15px 45px;
-        background: #F8F9FA;
-    }
-    .action-body-scroll{
-        height: calc(100vh - 115px);
+        font-size: 16px;
+        line-height: 19px;
+        margin-bottom: 14px;
     }
     .actions-body-data{
-        padding: 30px 45px;
+        padding: 0;
         .group-radiobutton{
             &.no-linked{               
                 pointer-events: none;   
@@ -65,7 +63,7 @@
             align-items: center;
             width: 515px;
             position: relative;
-            margin: 30px 0;
+            margin: 20px 0 0 0;
             .title-text{
                 color: #07377F;
                 font-weight: normal;
