--- a/findly-builder/src/app/components/general-settings/general-settings.component.html
+++ b/findly-builder/src/app/components/general-settings/general-settings.component.html
@@ -1,7 +1,9 @@
-<div class="header-title">General Settings</div>
-
-<perfect-scrollbar class="action-body-scroll">
-<app-actions></app-actions>
-
-<app-small-talk> </app-small-talk>
-</perfect-scrollbar>      
+<div class="g-settings-container">
+    <div class="header-title">General Settings</div>
+    <perfect-scrollbar class="action-body-scroll">
+        <div class="settings-general-data">
+            <app-actions></app-actions>
+            <app-small-talk> </app-small-talk>
+        </div>
+    </perfect-scrollbar>      
+</div>
