--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -68,7 +68,7 @@
                 allRunningActive: simulteObj && i < simulteObj.totalStages
               }">
               <div class="field_data" *cdkDragPreview>
-                <div class="title text-truncate">{{ pipe?.name }}</div>
+                <div class="title text-truncate"></div>
               </div>
               <div class="drag_drop_icon">
                 <img src="assets/icons/drog_drop.svg" />
