--- a/findly-builder/src/app/components/add-faq/add-faq.component.html
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.html
@@ -499,13 +499,13 @@
     </div>
   </div>
   <hr>
-  <div class="add-alternative-questions row" *ngIf="!isFollowUp && faqData">
+  <div class="add-alternative-questions row" *ngIf="!isFollowUp && faqData"> 
     <div class="col-10 pl-0 pr-2">
         <div class="question-name text-truncate">Alternate Questions
             <span *ngIf="faqData">{{faqData._source.alternateQuestions?.length>0?'('+faqData._source.alternateQuestions?.length+')':''}}</span>
             <!-- ({{(selectedFaq.alternateQuestions?selectedFaq.alternateQuestions.length:0)}}) -->
         </div>
-        <div class="added-tags text-truncate">Add alternate forms of the question, key tags and add synonyms.</div>
+        <div class="added-tags text-truncate">Add alternate forms of the question.</div>
     </div>
     <div class="col-2 p-0 text-right" *ngIf="!isAdd">
         <button class="kr-sg-button-primary btn_lg" (click)="addAltQues()">Add</button>
