--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -1,12 +1,15 @@
 <!-- Sidebar -->
 <div class="sidebar-fixed position-fixed activeMenu" *ngIf="show">
-	<div class="upgrade_your_plan_price" *ngIf="!settingMainMenu && !sourceMenu">
-		<ng-container *ngIf="showUpgrade">
+	<ng-container *ngIf="!settingMainMenu && !sourceMenu || sourceMenu">
+	<div class="upgrade_your_plan_price" [hidden]="!showUpgrade">
 		<div class="upgrade-plan-btn" (click)="upgrade()">Upgrade Your Plan<img src="assets/icons/pricing/carrotright.svg"></div>
 		<div class="document-limit">22%  document limit reached</div>
+		<ngb-progressbar class="mt-3" height="10px" type="primary" value="20" max="100">
+		</ngb-progressbar>
 		<div class="document-limit">10%  query limit reached</div>
-	</ng-container>
-	</div>
+		<ngb-progressbar class="mt-3" height="10px" type="primary" value="20" max="100">
+		</ngb-progressbar>
+	</div></ng-container>
 	<perfect-scrollbar class="perfect-scroll">
 		<div class="list-group list-group-flush" *ngIf="!settingMainMenu && !sourceMenu">					
 
@@ -341,7 +344,7 @@
 				<span class="linkTitle">Teams</span>
 			</div>
 
-			<!-- <div class="inside-menu-title">BILLING & USAGE</div>
+			<div class="inside-menu-title">BILLING & USAGE</div>
 			<div mat-button class="mat-button" [routerLink]="['/pricing']" skipLocationChange routerLinkActive="active" (click)="preview('index')" mat-button>
 				<span class="inlineIconBox leftAdjust">
 					<img src="assets/icons/sidemenu/new-icons/plandetails.svg" class="defaultIcon">
@@ -362,7 +365,7 @@
 					<img src="assets/icons/sidemenu/new-icons/invoice.svg" class="activeIcon">
 				</span>
 				<span class="linkTitle">Invoices</span>
-			</div> -->
+			</div>
 
 		</div>
 
