--- a/findly-builder/src/app/components/invoices/invoices.component.html
+++ b/findly-builder/src/app/components/invoices/invoices.component.html
@@ -3,7 +3,7 @@
         <div class="title">Invoices</div>
         <div class="d-flex align-items-center">
             <div class="kr-sg-input-search" [ngClass]="{'d-none': !showSearch}">
-                <input type="text" placeholder="Search" class="input-search"  (keyup.enter)="searchItems()" [ngClass]="{'pl-33':!searchInvoice}" autocomplete="off" [(ngModel)]="searchInvoice" (focusout)="showSearch= !showSearch" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
+                <input type="text" placeholder="Search" class="input-search" [ngClass]="{'pl-33':!searchInvoice,'pl-2':searchInvoice}" autocomplete="off" [(ngModel)]="searchInvoice" (focusout)="showSearch= !showSearch" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
                 (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
                 <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchInvoice">
                 <img class="close-icon" *ngIf="searchInvoice" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchInvoice}" (click)="searchInvoice='';toggleSearch(false)">
@@ -30,7 +30,7 @@
                 <div class="title col-2">SUBSCRIPTION</div>
                 <div class="title col-3 d-flex align-items-center"><img src="assets/icons/usage-log/sort.svg" class="mr-1"> INVOICE DATE</div>
             </div>
-            <div class="invoice-table-body row col-12" *ngFor="let invoice of invoices">
+            <div class="invoice-table-body row col-12" *ngFor="let invoice of invoices | fieldsFilter: [ searchInvoice, '_id']">
                 <div class="title col-2">{{invoice._id}}</div>
                 <div class="title col-3">{{invoice.subscriptionDetails.startDate  | dateFormatPipe: 'DD MMM YYYY'}} - {{invoice.subscriptionDetails.endDate  | dateFormatPipe: 'DD MMM YYYY'}}</div>
                 <div class="title col-2">$ {{invoice.amount}}</div>
